# justified-containers

./: .gitignore  .travis.yml  LICENSE  README.md  justified-containers.cabal  stack.yaml
src/Data/Map/: Justified.hs
src/Data/Map/Justified/: Tutorial.hs
test/Data/Map/: JustifiedSpec.hs
