name:                justified-containers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matt-noonan/justified-containers
license:             BSD2
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           2017 Matt Noonan
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Justified
                     , Data.Map.Justified.Tutorial
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers                     
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-noonan/justified-containers
