name:                justified-containers
version:             0.1.2.0
synopsis:            Keyed container types with type-checked proofs of key presence.
description:         This package contains wrappers around standard container types,
                     that provide guarantees about the presence of keys within the
                     container.
homepage:            https://github.com/matt-noonan/justified-containers
license:             BSD2
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           2017 Matt Noonan
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


source-repository head
  type:     git
  location: https://github.com/matt-noonan/justified-containers


library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Justified
                     , Data.Map.Justified.Tutorial
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers                     
  default-language:    Haskell2010


test-suite justified-containers-spec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -Wall -Wno-deferred-type-errors
  build-depends:     base >= 4.7 && < 5
                   , hspec
                   , justified-containers
                   , containers
                   , QuickCheck
                   , should-not-typecheck
  other-modules:     Data.Map.JustifiedSpec
  default-language:  Haskell2010
